# ProjectTemplates

./: README.md
C/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
C/benchmarks/: bench_main.cpp
C/include/: utils.h
C/src/: CMakeLists.txt  main.c  utils.c
C/tests/: CMakeLists.txt  test_main.cpp
Cpp/: .clang-format  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_old.txt
Cpp/benchmarks/: CMakeLists.txt  bench_main.cpp
Cpp/include/: utils.hpp
Cpp/src/: CMakeLists.txt  main.cpp  utils.cpp
Cpp/tests/: CMakeLists.txt  test_add.cpp  test_hard.cpp  test_mul.cpp  test_simple.cpp
